Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31156

[REG] GLWidget renderText() fails to render on Mac and Windows

XMLWordPrintable

    • All
    • 5c379f3ff0471c51827577d047c93bab88ad44ce, c625d923853d01ad668dd3e8ebd55b7e5a6bcdb8 d96bbd999fbd31687e4998705300ccdb5c4bcac4 (qt/qtbase/5.12)

      renderText() worked in Qt4.8.2 but fails to draw the text in Qt5. The problem is clearly demonstrated by a simple modification of the hellogl example (see attachment). The relevant changes to the example are in ::paintGL() where a simple triangle is drawn with single digit text drawn at each vertex. When compiled against Qt4 the text is rendered as expected. When compiled against Qt5 the text is not visible. Note that it is possible to make the text visible in Qt5 by adding glDisable(GL_DEPTH_TEST) but that leads to errors in depth ordering of drawn objects.

        1. renderText_opengl.zip
          13 kB
          Nomen
        2. qtbug31156_hellogl_demo.patch
          2 kB
          Friedemann Kleint
        3. hellogl_with_bug.zip
          11 kB
          Patrick Holloway
        4. RenderTextTest_VS2012.zip
          7 kB
          Lotfi Mira
        5. RenderTextTest.png
          26 kB
          Lotfi Mira
        6. workaround.png
          35 kB
          Lotfi Mira
        For Gerrit Dashboard: QTBUG-31156
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            nomen Nomen
            Votes:
            11 Vote for this issue
            Watchers:
            22 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes